tests/error/unary_plus.gw
// [contains] no match found for operator
int i;
+i;
